fix columns on mobile"

--- a/input.css
+++ b/input.css
@@ -80,7 +80,7 @@ p {
 
 .info-card-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 10px;
 }
 
@@ -94,6 +94,7 @@ p {
     rgba(238, 192, 198, 0.7) 100%
   );
   backdrop-filter: blur(5px);
+  max-width: 95vw;
 }
 
 .section-container {
@@ -104,4 +105,10 @@ p {
 }
 
 .main-section-container {
+}
+
+@media only screen and (min-width: 600px) {
+  .info-card-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
